feat: create svc for handling invite code generation and retrieval
